--- a/RoboMaster_AGV/AGV-chasiss/MDK-ARM/standard_tpye_c/standard_tpye_c.build_log.htm
+++ b/RoboMaster_AGV/AGV-chasiss/MDK-ARM/standard_tpye_c/standard_tpye_c.build_log.htm
@@ -27,7 +27,16 @@ Project File Date:  01/17/2024
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\AC506u7\Bin'
 Build target 'infantry_C'
-"standard_tpye_c\standard_tpye_c.axf" - 0 Error(s), 0 Warning(s).
+compiling chassis_task.c...
+..\application\chassis_task.c(647): warning:  #177-D: function "Rudder_motor_zero_ecd_set"  was declared but never referenced
+  static void Rudder_motor_zero_ecd_set(chassis_move_t *Rudder_ecd_set)
+..\application\chassis_task.c(503): warning:  #177-D: function "rudder_optimal_angle_solution"  was declared but never referenced
+  static void rudder_optimal_angle_solution(Rudder_Motor_t *rudder_optimal_angle)
+..\application\chassis_task.c: 2 warnings, 0 errors
+linking...
+Program Size: Code=87816 RO-data=2972 RW-data=672 ZI-data=50016  
+FromELF: creating hex file...
+"standard_tpye_c\standard_tpye_c.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -50,7 +59,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.6.0
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
